--- a/package.json
+++ b/package.json
@@ -7,14 +7,34 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "web": "webpack serve --mode=''development --config webpack.config.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@svgr/webpack": "^8.1.0",
+    "babel-loader": "^10.0.0",
+    "html-webpack-plugin": "^5.6.3",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-dom": "^19.0.0",
+    "react-native": "0.78.0",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-web": "^0.19.13",
+    "react-redux": "^9.2.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.21",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "15.0.1",
@@ -26,10 +46,16 @@
     "@react-native/typescript-config": "0.78.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-plugin-react-native-web": "^0.19.13",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-hook-form": "^7.54.2",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-svg": "^15.11.2",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
