--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "@stomp/rx-stomp": "^2.0.1",
+    "@stomp/stompjs": "^7.0.1",
     "@svgr/webpack": "^8.1.0",
+    "@types/sockjs-client": "^1.5.4",
+    "axios": "^1.8.4",
     "babel-loader": "^10.0.0",
     "html-webpack-plugin": "^5.6.3",
     "react": "19.0.0",
@@ -22,13 +26,19 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "^0.19.13",
+    "react-native-websocket": "^1.0.2",
     "react-redux": "^9.2.0",
+    "react-use-websocket": "^4.13.0",
     "reflect-metadata": "^0.2.2",
+    "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "typeorm": "^0.3.21",
     "url-loader": "^4.1.1",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
+    "webstomp-client": "^1.2.6",
     "yup": "^1.6.1"
   },
   "devDependencies": {
