--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "babel-loader": "^10.0.0",
     "html-webpack-plugin": "^5.6.3",
+    "inversify": "^7.2.0",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.78.0",
